# ic_telegram_bot

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
bot/: config.py  run_bot.py
bot/keybords/inline_keyboards/: auth_inline.py  ic_inline.py
bot/routers/: __init__.py
bot/routers/callback_handlers/: __init__.py  auth_callback_handlers.py  finance_callback_handlers.py
bot/routers/commands/: __init__.py  base_auth_commands.py  base_commands.py  fsm_commands.py
bot/routers/fsm/: auth_fsm.py
bot/routers/middlewares/: user.py
bot/schemas/: users.py
bot/services/db/: auth.py  log.py
bot/services/http/: __init__.py  auth.py  finance.py
bot/static/: paths.py
bot/static/text/: refactor.py
bot/static/text/buttons/: auth_buttons.py  home_buttons.py
bot/static/text/messages/: auth_messages.py  finance_messages.py  home_messages.py  start_message.py
db/: __init__.py  base.py  settings.py  utils.py
db/migrations/: env.py
db/migrations/versions/: 06fd7ccdc37c_.py  1a9d5fecf577_.py  468a548835cc_.py  ae712a6cb99b_.py
db/models/: users.py  users_actions.py
nginx/: Dockerfile  ca.crt  default.conf  nsuem.key  nsuem.ru.crt
